--- a/.env
+++ b/.env
@@ -11,10 +11,10 @@ REFRESH_TOKEN_KEY="QWERTYUIOP"
 REFRESH_TOKEN_TIME="15d"
 COOKIE_TIME=1296000000
 
-ADMIN_ACCESS_TOKEN_KEY="ADMINqwertyuiop"
-ADMIN_SECRET_TOKEN_TIME="15h"
-ADMIN_REFRESH_TOKEN_KEY="ADMINqwertyuiop"
-ADMIN_REFRESH_TOKEN_TIME="15d"
+ACCESS_TOKEN_KEYAdmin=your_admin_access_secret
+SECRET_TOKEN_TIMEAdmin=15m
+REFRESH_TOKEN_KEYAdmin=your_admin_refresh_secret
+REFRESH_TOKEN_TIMEAdmin=7d
 
 smtp_password=jpopsajcrycoexmu
 smtp_host=smtp.gmail.com
