--- a/.env
+++ b/.env
@@ -21,3 +21,5 @@ smtp_host=smtp.gmail.com
 smtp_port=587
 smtp_user=gulsanammamadieva083@gmail.com
 api_url=http://localhost:3000
+
+BOT_TOKEN=7995154102:AAFkhNhyh142Aftx1H_kGeVJSGFqvPtVcOQ
