--- a/.env
+++ b/.env
@@ -23,3 +23,5 @@ smtp_user=gulsanammamadieva083@gmail.com
 api_url=http://localhost:3000
 
 BOT_TOKEN=7995154102:AAFkhNhyh142Aftx1H_kGeVJSGFqvPtVcOQ
+
+crypt_password=MySecretPasswordForEncode
